tests/NormalTests/paczka1/small_fuzzy/64824515.err
Error in line 2: BUr6hi S270 18,7
Error in line 5: q6qwUN S59 42,1
Error in line 11: gaDdN S59 90,6
